--- a/client/index.html
+++ b/client/index.html
@@ -26,5 +26,9 @@
 
     <p id='hello-text'>Hello World!</p>
     <p id='repeat-text'></p>
+    <form>
+        <input id="input-form" type="text" placeholder="Enter a food">
+        <button id="input-button">Add Food</button>
+    </form>
 </body>
 </html>
